[gd_scene load_steps=2 format=3 uid="uid://dngmxoipygrgu"]

[ext_resource type="Script" path="res://ui/debug/colony/colony_info_panel.gd" id="1_panel"]

[node name="ColonyInfoPanel" type="PanelContainer"]
top_level = true
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("1_panel")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Colony #1"
horizontal_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AntCountLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ants: 0"

[node name="FoodCollectedLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Food Collected: 0.0 units"

[node name="RadiusLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Colony Radius: 30.0"
